@@ -1,4 +1,5 @@
 0.08
+ - Add Cieszyn to publishing places cleanup.
 
 0.07 2023-11-29T01:53:01+01:00
  - Add $options_hr return value to clean_date(). Implment circa date.
